--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/vision": "^4.21.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
