--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "16.0.10",
     "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-easy-crop": "^5.5.6",
