--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
     "pdf-parse": "^2.4.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-easy-crop": "^5.5.6",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
@@ -46,7 +46,7 @@
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.4.0",
-    "tldraw": "^4.2.3",
+    "tldraw": "^4.3.1",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
