--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^1.0.7",
     "@react-pdf/renderer": "^4.3.2",
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^1.2.0",
@@ -34,6 +35,7 @@
     "next": "16.0.10",
     "next-sanity": "^11.6.10",
     "next-themes": "^0.4.6",
+    "nodemailer": "^8.0.1",
     "pdf-parse": "^2.4.5",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
@@ -41,6 +43,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
+    "resend": "^6.9.2",
     "sanity": "^4.21.0",
     "sanity-plugin-markdown": "^7.0.3",
     "sonner": "^2.0.7",
@@ -53,6 +56,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/dotenv": "^6.1.1",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "dotenv": "^17.2.3",
