--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/client": "^7.13.1",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.21.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
@@ -37,6 +38,7 @@
     "next-themes": "^0.4.6",
     "nodemailer": "^8.0.1",
     "pdf-parse": "^2.4.5",
+    "qrcode": "^1.5.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-easy-crop": "^5.5.6",
